Refactor to generic, reusable request coalescing
- Replace ProductCoalescer with generic RequestCoalescer
- Add configurable cache key and upstream URL builders
- Create generic handler factory (createCoalescedHandler)
- Implement configuration-based routing in routes/index.ts
- Update documentation with step-by-step guide
- Remove product-specific code in favor of example template

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,8 +6,8 @@
   "durable_objects": {
     "bindings": [
       {
-        "name": "PRODUCT_COALESCER",
-        "class_name": "ProductCoalescer",
+        "name": "REQUEST_COALESCER",
+        "class_name": "RequestCoalescer",
       },
     ],
   },
@@ -15,6 +15,15 @@
     {
       "tag": "v1",
       "new_sqlite_classes": ["ProductCoalescer"],
+    },
+    {
+      "tag": "v2",
+      "renamed_classes": [
+        {
+          "from": "ProductCoalescer",
+          "to": "RequestCoalescer",
+        },
+      ],
     },
   ],
   "vars": {
